# serializer version: 1
# name: test_build_example
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-e656679f/example-a-e656679f-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-e656679f/example-a-e656679f-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_a_e656679f"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_a_e656679f"]
        
        [project]
        name = "example-a-e656679f"
        version = "1.0.0"
        dependencies = [
            '''example-b-e656679f>1.0.0''',
        ]
        requires-python = ">=3.12"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-e656679f/example-a-e656679f-1.0.0/src/example_a_e656679f/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-e656679f/example-b-e656679f-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-e656679f/example-b-e656679f-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_e656679f"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_e656679f"]
        
        [project]
        name = "example-b-e656679f"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.12"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-e656679f/example-b-e656679f-1.0.0/src/example_b_e656679f/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-e656679f/example-b-e656679f-2.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-e656679f/example-b-e656679f-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_e656679f"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_e656679f"]
        
        [project]
        name = "example-b-e656679f"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.12"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-e656679f/example-b-e656679f-2.0.0/src/example_b_e656679f/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-e656679f/example-b-e656679f-3.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-e656679f/example-b-e656679f-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_e656679f"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_e656679f"]
        
        [project]
        name = "example-b-e656679f"
        version = "3.0.0"
        dependencies = [
            '''example-c-e656679f''',
        ]
        requires-python = ">=3.12"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-e656679f/example-b-e656679f-3.0.0/src/example_b_e656679f/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'build/example-e656679f/example-e656679f-0.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-e656679f/example-e656679f-0.0.0/pyproject.toml': 'md5:96752d280dd77ca50d812849ae856f54',
      'build/example-e656679f/example-e656679f-0.0.0/src/example_e656679f/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'dist/example-e656679f/example_a_e656679f-1.0.0-py3-none-any.whl': 'md5:ac5a44b21de1588d29eda5067abc1bce',
      'dist/example-e656679f/example_a_e656679f-1.0.0.tar.gz': 'md5:4652b58b9ca9392a7a07a0e91f197cad',
      'dist/example-e656679f/example_b_e656679f-1.0.0-py3-none-any.whl': 'md5:3b29e16e6c54335637a9ff724e9ca95e',
      'dist/example-e656679f/example_b_e656679f-1.0.0.tar.gz': 'md5:3a59e6b6de26922b7723e26b326620f6',
      'dist/example-e656679f/example_b_e656679f-2.0.0-py3-none-any.whl': 'md5:3eed5624834cf11c466c37e5ba66b5cf',
      'dist/example-e656679f/example_b_e656679f-2.0.0.tar.gz': 'md5:5570405bc5da29b294d146ad4fc81a1f',
      'dist/example-e656679f/example_b_e656679f-3.0.0-py3-none-any.whl': 'md5:dcf96fa3b05d8cba480df05af93bf732',
      'dist/example-e656679f/example_b_e656679f-3.0.0.tar.gz': 'md5:74360812ea4731b43067b918276cadbb',
      'dist/example-e656679f/example_e656679f-0.0.0.tar.gz': 'md5:ac7d30ef08a71210b676995b947fba48',
      'tree': '''
        test_build_example0
        ├── build
        │   └── example-e656679f
        │       ├── example-a-e656679f-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_a_e656679f
        │       │           └── __init__.py
        │       ├── example-b-e656679f-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_e656679f
        │       │           └── __init__.py
        │       ├── example-b-e656679f-2.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_e656679f
        │       │           └── __init__.py
        │       ├── example-b-e656679f-3.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_e656679f
        │       │           └── __init__.py
        │       └── example-e656679f-0.0.0
        │           ├── .gitignore
        │           ├── pyproject.toml
        │           └── src
        │               └── example_e656679f
        │                   └── __init__.py
        └── dist
            └── example-e656679f
                ├── example_a_e656679f-1.0.0-py3-none-any.whl
                ├── example_a_e656679f-1.0.0.tar.gz
                ├── example_b_e656679f-1.0.0-py3-none-any.whl
                ├── example_b_e656679f-1.0.0.tar.gz
                ├── example_b_e656679f-2.0.0-py3-none-any.whl
                ├── example_b_e656679f-2.0.0.tar.gz
                ├── example_b_e656679f-3.0.0-py3-none-any.whl
                ├── example_b_e656679f-3.0.0.tar.gz
                └── example_e656679f-0.0.0.tar.gz
        
        19 directories, 24 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-e656679f
  
    ''',
  })
# ---
# name: test_build_example_already_exists
  dict({
    'exit_code': 1,
    'filesystem': dict({
      'tree': '''
        test_build_example_already_exi0
        └── build
            └── example-e656679f
        
        2 directories
  
      ''',
    }),
    'stderr': '''
      Building 'example-e656679f' in directory '[PWD]/build/example-e656679f'
      Destination directory '[PWD]/build/example-e656679f' already exists. Pass `--force` to allow removal.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_example_already_exists_with_rm_flag
  dict({
    'exit_code': 2,
    'stderr': '<not included>',
    'stdout': '',
  })
# ---
# name: test_build_example_short_names
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-e656679f/a-e656679f-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-e656679f/a-e656679f-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/a_e656679f"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/a_e656679f"]
        
        [project]
        name = "a-e656679f"
        version = "1.0.0"
        dependencies = [
            '''b-e656679f>1.0.0''',
        ]
        requires-python = ">=3.12"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-e656679f/a-e656679f-1.0.0/src/a_e656679f/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-e656679f/b-e656679f-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-e656679f/b-e656679f-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/b_e656679f"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/b_e656679f"]
        
        [project]
        name = "b-e656679f"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.12"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-e656679f/b-e656679f-1.0.0/src/b_e656679f/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-e656679f/b-e656679f-2.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-e656679f/b-e656679f-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/b_e656679f"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/b_e656679f"]
        
        [project]
        name = "b-e656679f"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.12"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-e656679f/b-e656679f-2.0.0/src/b_e656679f/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-e656679f/b-e656679f-3.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-e656679f/b-e656679f-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/b_e656679f"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/b_e656679f"]
        
        [project]
        name = "b-e656679f"
        version = "3.0.0"
        dependencies = [
            '''c-e656679f''',
        ]
        requires-python = ">=3.12"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-e656679f/b-e656679f-3.0.0/src/b_e656679f/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'build/example-e656679f/example-e656679f-0.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-e656679f/example-e656679f-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_e656679f"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_e656679f"]
        
        [project]
        name = "example-e656679f"
        version = "0.0.0"
        dependencies = [
            '''a-e656679f''',
        ]
        requires-python = ">=3.12"
        description = '''This is an example scenario, in which the user depends on a single package `a` which requires `b`.'''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-e656679f/example-e656679f-0.0.0/src/example_e656679f/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'dist/example-e656679f/a_e656679f-1.0.0-py3-none-any.whl': 'md5:2368bbae0cf203b04c327e0280f0a067',
      'dist/example-e656679f/a_e656679f-1.0.0.tar.gz': 'md5:125a39fed14901cccea1a66c7387da56',
      'dist/example-e656679f/b_e656679f-1.0.0-py3-none-any.whl': 'md5:fccf16f2a21de2a5a6f877f323cc7292',
      'dist/example-e656679f/b_e656679f-1.0.0.tar.gz': 'md5:8eda211f455d884931fab26fb4d00e8a',
      'dist/example-e656679f/b_e656679f-2.0.0-py3-none-any.whl': 'md5:d023f0be7dd04e50e64f6d76202cae74',
      'dist/example-e656679f/b_e656679f-2.0.0.tar.gz': 'md5:0b9b70d16fdebbe7a8b502b43d9b18f4',
      'dist/example-e656679f/b_e656679f-3.0.0-py3-none-any.whl': 'md5:5a5bc0eb9510dd70ced7afe3eef33b04',
      'dist/example-e656679f/b_e656679f-3.0.0.tar.gz': 'md5:062dfd3fe89875cb5590ea1f42c1f989',
      'dist/example-e656679f/example_e656679f-0.0.0.tar.gz': 'md5:d9d6a60e6bdc981c51464d97dbb6d286',
      'tree': '''
        test_build_example_short_names0
        ├── build
        │   └── example-e656679f
        │       ├── a-e656679f-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── a_e656679f
        │       │           └── __init__.py
        │       ├── b-e656679f-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── b_e656679f
        │       │           └── __init__.py
        │       ├── b-e656679f-2.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── b_e656679f
        │       │           └── __init__.py
        │       ├── b-e656679f-3.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── b_e656679f
        │       │           └── __init__.py
        │       └── example-e656679f-0.0.0
        │           ├── .gitignore
        │           ├── pyproject.toml
        │           └── src
        │               └── example_e656679f
        │                   └── __init__.py
        └── dist
            └── example-e656679f
                ├── a_e656679f-1.0.0-py3-none-any.whl
                ├── a_e656679f-1.0.0.tar.gz
                ├── b_e656679f-1.0.0-py3-none-any.whl
                ├── b_e656679f-1.0.0.tar.gz
                ├── b_e656679f-2.0.0-py3-none-any.whl
                ├── b_e656679f-2.0.0.tar.gz
                ├── b_e656679f-3.0.0-py3-none-any.whl
                ├── b_e656679f-3.0.0.tar.gz
                └── example_e656679f-0.0.0.tar.gz
        
        19 directories, 24 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-e656679f
  
    ''',
  })
# ---
# name: test_build_example_with_seed
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-39a33e2b/example-39a33e2b-0.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-39a33e2b/example-39a33e2b-0.0.0/pyproject.toml': 'md5:6da365613e797187c67b68ee50aca94e',
      'build/example-39a33e2b/example-39a33e2b-0.0.0/src/example_39a33e2b/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-39a33e2b/example-a-39a33e2b-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-39a33e2b/example-a-39a33e2b-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_a_39a33e2b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_a_39a33e2b"]
        
        [project]
        name = "example-a-39a33e2b"
        version = "1.0.0"
        dependencies = [
            '''example-b-39a33e2b>1.0.0''',
        ]
        requires-python = ">=3.12"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-39a33e2b/example-a-39a33e2b-1.0.0/src/example_a_39a33e2b/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-39a33e2b/example-b-39a33e2b-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-39a33e2b/example-b-39a33e2b-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_39a33e2b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_39a33e2b"]
        
        [project]
        name = "example-b-39a33e2b"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.12"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-39a33e2b/example-b-39a33e2b-1.0.0/src/example_b_39a33e2b/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-39a33e2b/example-b-39a33e2b-2.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-39a33e2b/example-b-39a33e2b-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_39a33e2b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_39a33e2b"]
        
        [project]
        name = "example-b-39a33e2b"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.12"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-39a33e2b/example-b-39a33e2b-2.0.0/src/example_b_39a33e2b/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-39a33e2b/example-b-39a33e2b-3.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-39a33e2b/example-b-39a33e2b-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_39a33e2b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_39a33e2b"]
        
        [project]
        name = "example-b-39a33e2b"
        version = "3.0.0"
        dependencies = [
            '''example-c-39a33e2b''',
        ]
        requires-python = ">=3.12"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-39a33e2b/example-b-39a33e2b-3.0.0/src/example_b_39a33e2b/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-39a33e2b/example_39a33e2b-0.0.0.tar.gz': 'md5:29620ef437cce3e48c250135964da5e0',
      'dist/example-39a33e2b/example_a_39a33e2b-1.0.0-py3-none-any.whl': 'md5:e0adff07cc8832b04c5740e5e24dc4c5',
      'dist/example-39a33e2b/example_a_39a33e2b-1.0.0.tar.gz': 'md5:d6db16975490c7b3491c8f9a7a989e87',
      'dist/example-39a33e2b/example_b_39a33e2b-1.0.0-py3-none-any.whl': 'md5:95caa3bfd907d4e672ab25457fcf822a',
      'dist/example-39a33e2b/example_b_39a33e2b-1.0.0.tar.gz': 'md5:ff83254b88dc5166a1a2c7a7c391c4c6',
      'dist/example-39a33e2b/example_b_39a33e2b-2.0.0-py3-none-any.whl': 'md5:4ddc8cdac3258b23afc203b222d1d3ba',
      'dist/example-39a33e2b/example_b_39a33e2b-2.0.0.tar.gz': 'md5:a8ef694c3c72f7e160becea981368414',
      'dist/example-39a33e2b/example_b_39a33e2b-3.0.0-py3-none-any.whl': 'md5:51b49671e3c5b57f90567ce3d7d10973',
      'dist/example-39a33e2b/example_b_39a33e2b-3.0.0.tar.gz': 'md5:5b13c65809ccc0c2c501c3b1b8761c36',
      'tree': '''
        test_build_example_with_seed0
        ├── build
        │   └── example-39a33e2b
        │       ├── example-39a33e2b-0.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_39a33e2b
        │       │           └── __init__.py
        │       ├── example-a-39a33e2b-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_a_39a33e2b
        │       │           └── __init__.py
        │       ├── example-b-39a33e2b-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_39a33e2b
        │       │           └── __init__.py
        │       ├── example-b-39a33e2b-2.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_39a33e2b
        │       │           └── __init__.py
        │       └── example-b-39a33e2b-3.0.0
        │           ├── .gitignore
        │           ├── pyproject.toml
        │           └── src
        │               └── example_b_39a33e2b
        │                   └── __init__.py
        └── dist
            └── example-39a33e2b
                ├── example_39a33e2b-0.0.0.tar.gz
                ├── example_a_39a33e2b-1.0.0-py3-none-any.whl
                ├── example_a_39a33e2b-1.0.0.tar.gz
                ├── example_b_39a33e2b-1.0.0-py3-none-any.whl
                ├── example_b_39a33e2b-1.0.0.tar.gz
                ├── example_b_39a33e2b-2.0.0-py3-none-any.whl
                ├── example_b_39a33e2b-2.0.0.tar.gz
                ├── example_b_39a33e2b-3.0.0-py3-none-any.whl
                └── example_b_39a33e2b-3.0.0.tar.gz
        
        19 directories, 24 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-39a33e2b
  
    ''',
  })
# ---
# name: test_build_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_no_target
  dict({
    'exit_code': 2,
    'stderr': '''
      usage: packse build [-h] [--force] [--short-names] [--no-hash] [--skip-root]
                          [-v] [-q]
                          targets [targets ...]
      packse build: error: the following arguments are required: targets
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
